working on new site (done except for the content)

--- a/generator/header.html
+++ b/generator/header.html
@@ -23,11 +23,11 @@
 <!-- HEADER -->
 
 <tr>
-    <td class="main" align="left">
+    <td class="main" id="ibis_logo_cell" align="left">
 	<a href="index.html"><img src="images/ibis-logo.png" alt="Ibis logo" ></a>
     </td>
 
-    <td class="main" align="right">
+    <td class="main" id="vu_logo_cell" align="right">
 	<a href="http://www.vu.nl"><img src="images/vu-logo.png" alt="VU logo" ></a>
     </td>
 </tr>
