website just about done :)

--- a/content/news-summary.html
+++ b/content/news-summary.html
@@ -1,15 +1,28 @@
 <tr>
     <td class="news">
-	<a href="news.html#gmi2.1" class="news">June 2008: Ibis GMI 2.1 is available now!</a>
+	<a href="news.html#javagat2.0.1" class="news">JavaGAT 2.0.1 released</a>
     </td>
 </tr>
 <tr>
     <td class="news">
-	<a href="news.html#gmi2.1" class="news">June 2008: Ibis GMI 2.1 is available now!</a>
+	<a href="news.html#dach" class="news">Press Release: Ibis wins Data Analysis Challenge for Finding Supernovae</a>
     </td>
 </tr>
+
 <tr>
     <td class="news">
-	<a href="news.html#gmi2.1" class="news">June 2008: Ibis GMI 2.1 is available now!</a>
+	<a href="news.html#rmi2.1" class="news">Ibis RMI 2.1 released</a>
+    </td>
+</tr>
+
+<tr>
+    <td class="news">
+	<a href="news.html#mpj2.1" class="news">MPJ 2.1 released</a>
+    </td>
+</tr>
+
+<tr>
+    <td class="news">
+	<a href="news.html#gmi2.1" class="news">GMI 2.1 released</a>
     </td>
 </tr>
