--- a/content/people.html
+++ b/content/people.html
@@ -22,8 +22,6 @@ From left to right:
 <div>
     <a href="http://www.cs.vu.nl/~jason"><img src="images/people/jason.jpg" alt=
 	"Jason Maassen"></a> 
-    <a href="http://www.cs.vu.nl/~rob"><img src="images/people/rob.jpg" alt=
-	"Rob van Nieuwpoort"></a>
     <a href="http://www.cs.vu.nl/~fjseins"><img src="images/people/frank.jpg" alt=
 	"Frank J. Seinstra"></a>
 </div>
@@ -34,12 +32,6 @@ From left to right:
     <script type="text/javascript"> generate_address( "jason", "cs.vu.nl" ); </script>:<br>
     Worked on Ibis design, Ibis TCP implementation, efficient serialization, RMI, Object
     replication (RepMI) and Group Method Invocation (GMI).
-    </li>
-
-    <li><a href="http://www.cs.vu.nl/~rob/">Rob V. van Nieuwpoort</a> 
-    <script type="text/javascript"> generate_address( "rob", "cs.vu.nl" ); </script>:<br>
-    Worked on Ibis design, Ibis TCP implementation, efficient serialization, RMI and Satin
-    (parallel Divide-and-Conquer).
     </li>
 
     <li><a href="http://www.cs.vu.nl/~fjseins/">Frank J. Seinstra</a> 
@@ -104,18 +96,47 @@ From left to right:
 <h4>Former members</h4>
 
 <div>
+    <a href="http://www.cs.vu.nl/~rob"><img src="images/people/rob.jpg" alt= "Rob van Nieuwpoort"></a>
+    <a href="http://www.cs.vu.nl/~gosia/"><img src="images/people/gosia.jpg" alt= "Malgorzata Wrzesinska"></a> 
+    <a href="http://www.cs.vu.nl/~reeuwijk"><img src= "images/people/kees_v_reeuwijk.jpg" 
+	alt="Kees van Reeuwijk"></a> 
+    <a href= "http://www.cs.vu.nl/~rutger"><img src="images/people/rutger.jpg" alt="Rutger Hofman"></a>
+</div>
+
+
+<div>
+    From left to right:
+    <ul>
+	<li><a href="http://www.cs.vu.nl/~rob/">Rob V. van Nieuwpoort</a> 
+	<script type="text/javascript"> generate_address( "rob", "cs.vu.nl" ); </script>:<br>
+	Worked on Ibis design, Ibis TCP implementation, efficient serialization, RMI and Satin
+	(parallel Divide-and-Conquer).
+	</li>
+
+	<li><a href="http://www.cs.vu.nl/~gosia/">Malgorzata Wrzesinska</a> 
+	<script type="text/javascript"> generate_address( "gosia", "cs.vu.nl" ); </script>:<br>
+	Worked on Ibis RMI, Satin fault tolerance, and Satin shared objects.</li>
+
+	<li><a href="http://www.cs.vu.nl/~reeuwijk/">Kees van Reeuwijk</a> 
+	<script type="text/javascript"> generate_address( "reeuwijk", "cs.vu.nl" ); </script>:<br>
+	Worked on some larger applications on top of Ibis, for instance a solver for the Satisfiability
+	(SAT) problem (written on top of Satin).</li>
+
+	<li><a href="http://www.cs.vu.nkkl/~rutger/">Rutger Hofman</a>
+	<script type="text/javascript"> generate_address( "rutger", "cs.vu.nl" ); </script>:<br>
+	Worked on NetIbis, messagePassing Ibis, CCJ, and many other things.</li>
+    </ul>
+</div>
+      
+<div>
     <a href="http://dept-info.labri.fr/~aumage"><img src="images/people/olivier.jpg" alt="Olivier Aumage"></a>
     <a href="http://runtime.futurs.inria.fr/adenis"<img src="images/people/alexandre.jpg" 
 	alt= "Alexandre Denis"></a>
     <a href="http://www-sop.inria.fr/oasis/personnel/Fabrice.Huet/"><img src="images/people/fabrice.jpg" 
 	alt="Fabrice Huet"></a> 
     <a href="http://www.cs.vu.nl/~maik"><img src= "images/people/maik.jpg" alt="Maik Nijhuis"></a> 
-    <a href="http://www.cs.vu.nl/~reeuwijk"><img src= "images/people/kees_v_reeuwijk.jpg" 
-	alt="Kees van Reeuwijk"></a> 
-    <a href= "http://www.cs.vu.nl/~rutger"><img src="images/people/rutger.jpg" alt="Rutger Hofman"></a>
-    <a href="http://www.cs.vu.nl/~gosia/"><img src="images/people/gosia.jpg" alt= "Malgorzata Wrzesinska"></a> 
-
 </div>
+
 From left to right:
 
 <ul>
@@ -135,17 +156,4 @@ From left to right:
     <li><a href="http://www.cs.vu.nl/~maik">Maik Nijhuis</a> 
     <script type="text/javascript"> generate_address( "maik", "cs.vu.nl" ); </script>:<br>
     Wrote a BarnesHutt implementation for Satin.</li>
-
-    <li><a href="http://www.cs.vu.nl/~reeuwijk/">Kees van Reeuwijk</a> 
-    <script type="text/javascript"> generate_address( "reeuwijk", "cs.vu.nl" ); </script>:<br>
-    Worked on some larger applications on top of Ibis, for instance a solver for the Satisfiability
-    (SAT) problem (written on top of Satin).</li>
-
-    <li><a href="http://www.cs.vu.nkkl/~rutger/">Rutger Hofman</a>
-    <script type="text/javascript"> generate_address( "rutger", "cs.vu.nl" ); </script>:<br>
-    Worked on NetIbis, messagePassing Ibis, CCJ, and many other things.</li>
-
-    <li><a href="http://www.cs.vu.nl/~gosia/">Malgorzata Wrzesinska</a> 
-    <script type="text/javascript"> generate_address( "gosia", "cs.vu.nl" ); </script>:<br>
-    Worked on Ibis RMI, Satin fault tolerance, and Satin shared objects.</li>
 </ul>
