--- a/content/smartsockets.html
+++ b/content/smartsockets.html
@@ -1,14 +1,6 @@
-<table class=topmenu><tr>
-<td class=topmenu ><a class=topmenu href="http://gforge.cs.vu.nl/projects/ibis/">Download Smartsockets</a></td>
-<td class=topmenu ><a class=topmenu href="publications.html#smartsockets">Smartsockets Publications</a></td>
-<td class=topmenu ><a class=topmenu href="talks.html#smartsockets">Smartsockets Talks</a></td>
-<td class=topmenu ><script type="text/javascript"> generate_contact_address( "jason", "cs.vu.nl" ); </script></td>
-</tr>
-</table>
-
 <h2>Smartsockets</h2>
 
-Tightly coupled parallel applications are increasingly run in grid
+<p>Tightly coupled parallel applications are increasingly run in grid
 environments. Unfortunately, on many grid sites the ability of machines to
 create or accept network connections is severely limited by firewalls, network
 address translation (NAT) or non-routed networks. Multi homing further
@@ -17,5 +9,4 @@ solutions exist for some of these problems, it is usually up to the
 application's user to discover the cause of the connectivity problems and find
 a solution. The SmartSockets communication library lifts this burden by
 automatically discovering the connectivity problems and  solving them with as
-little support from the user as possible.
-
+little support from the user as possible.</p>
