--- a/content/talks.html
+++ b/content/talks.html
@@ -29,12 +29,12 @@ include ("generated/talks_gmi.html");
 include ("generated/talks_zorilla.html");
 ?>
 
-<a name=ibis><h3>IPL: Ibis Communication Library</h3></a>
+<a name=ipl><h3>IPL: Ibis Communication Library</h3></a>
 <?php
-include ("generated/talks_ibis.html");
+include ("generated/talks_ipl.html");
 ?>
 
-<a name=smartsockets><h3>Smartsockets</h3><a>
+<a name=smartsockets><h3>Smartsockets</h3></a>
 <?php
 include ("generated/talks_smartsockets.html");
 ?>
