--- a/projects.html
+++ b/projects.html
@@ -91,6 +91,16 @@
             </tr>
             <tr>
                 <td class=menu>
+                    <a href="javagat-faq.html" class="menu level2">FAQ</a>
+                </td>
+            </tr>
+            <tr>
+                <td class=menu>
+                    <a href="javagat-adaptors.html" class="menu level2">Adaptors</a>
+                </td>
+            </tr>
+            <tr>
+                <td class=menu>
                     <a href="zorilla.html" class="menu level1">Zorilla</a>
                 </td>
             </tr>
