fixed layout added gradient to pages with no menu removed old (huge) videos which weren't referred to anyway moved menu properties to main dir

--- a/content/contact.html
+++ b/content/contact.html
@@ -1,5 +1,5 @@
 <!-- Fancy mail banner :) -->
-<img src="images/banners/mail-banner.png" alt="Banner">
+<img class=banner src="images/banners/mail-banner.png" alt="Banner">
 
 <p>If you like to contact us, please don't hesitate. We like to know about your
 projects that are using (parts of) the Ibis project. In fact we're very
