--- a/content/downloads.html
+++ b/content/downloads.html
@@ -1,4 +1,14 @@
-<!-- Fancy newspaper banner :) -->
-<img src="images/banners/floppy-banner.png" alt="Banner">
+<p>See the <a
+	href="http://gforge.cs.vu.nl/gf/project/ibis/frs/">files page at the
+	gforge machine</a> for downloads:</p> 
 
-<h3>Downloads</h3>
+    <iframe src="http://gforge.cs.vu.nl/gf/project/ibis/frs/" 
+	
+	width=975px
+	height=800px
+	frameborder=1
+	scrolling=auto
+
+    >
+</iframe>
+
