--- a/content/javagat.html
+++ b/content/javagat.html
@@ -1,5 +1,5 @@
 <h2>JavaGAT</h2>
-<img class=floating src="images/JavaGAT-small.png" alt="JavaGAT logo">
+<img class=floating src="images/logos/JavaGAT-small.png" alt="JavaGAT logo">
 <p>
 Java Grid Application Toolkit (JavaGAT) offers a set of
 coordinated, generic and flexible APIs for accessing grid services
