--- a/content/news.html
+++ b/content/news.html
@@ -1,5 +1,5 @@
 <!-- Fancy newspaper banner :) -->
-<img src="images/banners/newspaper-banner.png" alt="Banner">
+<img class=banner src="images/banners/newspaper-banner.png" alt="Banner">
 
 <a name="javagat2.0.1"></a> 
 <h4>JavaGAT 2.0.1 released</h4> 
