--- a/content/users.html
+++ b/content/users.html
@@ -1,5 +1,5 @@
 <!-- Fancy map banner :) -->
-<img src="images/banners/map-banner.png" alt="Banner">
+<img class=banner src="images/banners/map-banner.png" alt="Banner">
 
 <h2>Ibis users</h2>
 
