--- a/generator/header.html
+++ b/generator/header.html
@@ -23,12 +23,9 @@
 <!-- HEADER -->
 
 <tr>
-    <td class="main" id="ibis_logo_cell" align="left">
-	<a href="index.html"><img src="images/ibis-logo.png" alt="Ibis logo" ></a>
+    <td class="main" align="left" colspan=2>
+	<a href="index.html"><img src="images/header.png" alt="Header" ></a>
     </td>
 
-    <td class="main" id="vu_logo_cell" align="right">
-	<a href="http://www.vu.nl"><img src="images/vu-logo.png" alt="VU logo" ></a>
-    </td>
 </tr>
 
