--- a/content/index.html
+++ b/content/index.html
@@ -1,5 +1,5 @@
 <!-- this image also holds the title of the ibis page -->
-<img src="images/banners/balloons-text.png" alt="Banner">
+<img class=banner src="images/banners/balloons-text.png" alt="Banner">
 
 <h2>Welcome to the Ibis webpage.</h2>
 
