--- a/content/papers.html
+++ b/content/papers.html
@@ -1,5 +1,5 @@
 <!-- Fancy diploma banner :) -->
-<img src="images/banners/diploma-banner.png" alt="Banner">
+<img class=banner src="images/banners/diploma-banner.png" alt="Banner">
 
 <h2>Papers</h2>
 
