--- a/content/projects.html
+++ b/content/projects.html
@@ -1,5 +1,5 @@
 <!-- Fancy star picture :) -->
-<img src="images/projects-banner.png" alt="Banner">
+<img class=banner src="images/banners/projects-banner.png" alt="Banner">
 
 <h3>The Ibis Philosophy</h3>
 
