--- a/generator/footer.html
+++ b/generator/footer.html
@@ -2,5 +2,15 @@
 <!-- FOOTER -->
 
 </table>
+
+<p>
+<script src="http://www.google-analytics.com/urchin.js" type="text/javascript">
+</script>
+<script type="text/javascript">
+    _uacct = "UA-123146-1";
+    urchinTracker();
+</script>
+</p>
+
 </body>
 </html>
