--- a/news.html
+++ b/news.html
@@ -23,13 +23,10 @@
 <!-- HEADER -->
 
 <tr>
-    <td class="main" id="ibis_logo_cell" align="left">
-	<a href="index.html"><img src="images/ibis-logo.png" alt="Ibis logo" ></a>
+    <td class="main" align="left" colspan=2>
+	<a href="index.html"><img src="images/header.png" alt="Header" ></a>
     </td>
 
-    <td class="main" id="vu_logo_cell" align="right">
-	<a href="http://www.vu.nl"><img src="images/vu-logo.png" alt="VU logo" ></a>
-    </td>
 </tr>
 
 <!-- TOP MENU -->
@@ -70,6 +67,11 @@
 </tr>
 
 <tr>
+<!-- EMPTY SUB MENU -->
+
+    <td class=main>
+        <img src="images/gradient.png">
+    </td>
     <!-- CONTENT -->
     <td class=main id=content_cell>
         <?php include ("content/news.html"); ?>
@@ -79,5 +81,15 @@
 <!-- FOOTER -->
 
 </table>
+
+<p>
+<script src="http://www.google-analytics.com/urchin.js" type="text/javascript">
+</script>
+<script type="text/javascript">
+    _uacct = "UA-123146-1";
+    urchinTracker();
+</script>
+</p>
+
 </body>
 </html>
