--- a/prog-models.html
+++ b/prog-models.html
@@ -6,7 +6,7 @@
 
 <link href="style.css" type="text/css" rel="StyleSheet"> 
 
-<script type="text/javascript" src="generate_address.js">
+<script type="text/javascript" src="address_script.js">
 </script>
 
 <link rel="shortcut icon" href="favicon.ico">
