--- a/javagat-adaptors.html
+++ b/javagat-adaptors.html
@@ -24,7 +24,8 @@
 
 <tr>
     <td class="main" align="left" colspan=2>
-	<a href="index.html"><img src="images/header.png" alt="Header" ></a>
+	<a href="index.html"><img class=floating-left src="images/logos/ibis-logo.png" alt="Header" ></a>
+	<a href="http://www.vu.nl"><img class=floating-right src="images/logos/vu-logo.gif" alt="Header" ></a>
     </td>
 
 </tr>
