improved downloads section text

--- a/content/downloads.html
+++ b/content/downloads.html
@@ -1,6 +1,6 @@
-<p>See the <a
-	href="http://gforge.cs.vu.nl/gf/project/ibis/frs/">files page at the
-	gforge machine</a> for downloads:</p> 
+<p>Ibis downloads are available at the <a
+    href="http://gforge.cs.vu.nl/gf/project/ibis/frs/">gforge
+    project page</a> (loaded in a frame below)</p> 
 
     <iframe src="http://gforge.cs.vu.nl/gf/project/ibis/frs/" 
 	
