improved contact page

--- a/content/contact.html
+++ b/content/contact.html
@@ -10,10 +10,19 @@ improving and maintaining Ibis. So please let us know! </p>
 <p>You can contact the ibis team by sending an email to:  <script type="text/javascript"> generate_address_bare( "ibis", "cs.vu.nl" ); </script>. 
 </p>
 
-<p>If you want to report a bug in one of the software components please go to our <a href="http://gforge.cs.vu.nl/gf/project/ibis/tracker/">bug tracker</a>.<br />
+<p>You can also go to the <a
+    href="http://gforge.cs.vu.nl/gf/project/ibis">Ibis project development
+    site</a>. This page includes <a
+    href="http://gforge.cs.vu.nl/gf/project/ibis/scmsvn">SVN access</a> to the
+current version of Ibis, a <a
+    href="http://gforge.cs.vu.nl/gf/project/ibis/tracker/">bug tracker</a>, a
+<a href="http://gforge.cs.vu.nl/gf/project/ibis/tracker/">feature request
+    tracker</a>, and <a
+    href="http://gforge.cs.vu.nl/gf/project/ibis/mailman/">mailing
+    lists</a>.</p>
 
-Feature requests can be sent to our <a href="http://gforge.cs.vu.nl/gf/project/ibis/tracker/">feature request tracker</a>.</p>
-
-<p>To get always informed about the newest Ibis events (like releases), you can <a href="http://mailman.few.vu.nl/mailman/listinfo/ibis-announce">register at the ibis-announce mailing list</a>.</p>
-
-<p>If you want to participate in our project, please visit the <a href="https://gforge.cs.vu.nl/gf/project/ibis">internal project page</a>. 
+<p>The JavaGAT has a seperate <a
+    href="http://gforge.cs.vu.nl/gf/project/javagat">development site</a>, also
+with <a href = "http://gforge.cs.vu.nl/gf/project/javagat/scmsvn">SVN</a>, <a
+    href="http://gforge.cs.vu.nl/gf/project/javagat/tracker/">bug and feature
+    trackers</a>, etc.</p>
