fixed proactive logo (now hosted on site)

--- a/content/users.html
+++ b/content/users.html
@@ -64,8 +64,8 @@ we are mainly dealing with aspects of load balancing and job-scheduling.</p>
 <h3>ProActive</h3>
 
 <p><a href="http://www-sop.inria.fr/oasis/proactive"><img
-    src="http://www-sop.inria.fr/oasis/proactive/images/pro-active2.gif"
-    width="150" class="userlogo" alt="ProActive logo"></a>ProActive is a GRID
+    src="Logo-ProActive_small.png"
+    alt="ProActive logo"></a>ProActive is a GRID
 Java library for parallel, distributed, and concurrent computing, also
 featuring mobility and security in a uniform framework. With a reduced set of
 simple primitives, ProActive provides a comprehensive API allowing to
