smartsockets new fixed proactive image url

--- a/content/news-summary.html
+++ b/content/news-summary.html
@@ -1,5 +1,11 @@
 <tr>
     <td class="news">
+	<a href="news.html#smartsockets-1.4" class="news">Smartsockets 1.4 released</a>
+    </td>
+</tr>
+
+<tr>
+    <td class="news">
 	<a href="news.html#javagat2.0.1" class="news">JavaGAT 2.0.1 released</a>
     </td>
 </tr>
