--- a/content/news.html
+++ b/content/news.html
@@ -1,6 +1,10 @@
 <!-- Fancy newspaper banner :) -->
 <img class=banner src="images/banners/newspaper-banner.png" alt="Banner">
 
+<a name="smartsockets-1.4"></a>
+<h4>Smartsockets 1.4 released</h4>
+<p>October 2008: Smartsockets 1.4 is now available from the downloads page. This is the first public release of Smartsockets.</p>
+
 <a name="javagat2.0.1"></a> 
 <h4>JavaGAT 2.0.1 released</h4> 
 
