--- a/content/users.html
+++ b/content/users.html
@@ -64,7 +64,7 @@ we are mainly dealing with aspects of load balancing and job-scheduling.</p>
 <h3>ProActive</h3>
 
 <p><a href="http://www-sop.inria.fr/oasis/proactive"><img
-    src="Logo-ProActive_small.png"
+    src="images/logos/Logo-ProActive_small.png"
     alt="ProActive logo"></a>ProActive is a GRID
 Java library for parallel, distributed, and concurrent computing, also
 featuring mobility and security in a uniform framework. With a reduced set of
