--- a/content/contact.html
+++ b/content/contact.html
@@ -14,7 +14,7 @@ improving and maintaining Ibis. So please let us know! </p>
     href="http://gforge.cs.vu.nl/gf/project/ibis">Ibis project development
     site</a>. This page includes <a
     href="http://gforge.cs.vu.nl/gf/project/ibis/scmsvn">SVN access</a> to the
-current version of Ibis, a <a
+current development version of Ibis software, a <a
     href="http://gforge.cs.vu.nl/gf/project/ibis/tracker/">bug tracker</a>, a
 <a href="http://gforge.cs.vu.nl/gf/project/ibis/tracker/">feature request
     tracker</a>, and <a
