fixed some html warnings

--- a/content/javagat.html
+++ b/content/javagat.html
@@ -8,7 +8,7 @@ from application codes, portals, data managements systems, etc.</p>
 <p>JavaGAT sits between grid applications and numerous types of
 grid middleware, such as Globus, SGE, SSH or Zorilla. JavaGAT
 lifts the burden of grid application programmers by providing them
-with a uniform interface that provides:
+with a uniform interface that provides:</p>
 <ul>
     <li>file operations (File, LogicalFile, RandomAccessFile, Endpoint)</li>
     <li>file stream operations (FileInputStream, FileOutputStream)</li>
@@ -16,6 +16,7 @@ with a uniform interface that provides:
     <li>monitoring (Monitorable)</li>
     <li>access to information services (AdvertService)</li>
 </ul>
+<p>
 As a result, grid
 application programmers need only to learn a single API to obtain access
 to the entire grid. Due to its modular design, JavaGAT can easily
