--- a/content/projects.html
+++ b/content/projects.html
@@ -94,17 +94,17 @@ including native code.</p>
     
 	    <object classid="clsid:d27cdb6e-ae6d-11cf-96b8-444553540000"
 		codebase="http://download.macromedia.com/pub/shockwave/cabs/flash/swflash.cab#version=6,0,40,0"
-		width="400" height="300"><param name="width" value="400"/>
-		<param name="height" value="300" />
-		<param name="allowscriptaccess" value="always" />
-		<param name="allowfullscreen" value="true" />
-		<param name="src" value="http://vimeo.com/moogaloop.swf?clip_id=1657649&server=vimeo.com&show_title=1&show_byline=1&show_portrait=0&color=&fullscreen=1" />
-		<embed type="application/x-shockwave-flash" width="400" height="300" allowscriptaccess="always" allowfullscreen="true" src="http://vimeo.com/moogaloop.swf?clip_id=1657649&server=vimeo.com&show_title=1&show_byline=1&show_portrait=0&color=&fullscreen=1">
+		width="400" height="300"><param name="width" value="400">
+		<param name="height" value="300" >
+		<param name="allowscriptaccess" value="always" >
+		<param name="allowfullscreen" value="true" >
+		<param name="src" value="http://vimeo.com/moogaloop.swf?clip_id=1657649&amp;server=vimeo.com&amp;show_title=1&amp;show_byline=1&amp;show_portrait=0&amp;color=&amp;fullscreen=1">
+		<embed type="application/x-shockwave-flash" width="400" height="300" allowscriptaccess="always" allowfullscreen="true" src="http://vimeo.com/moogaloop.swf?clip_id=1657649&amp;server=vimeo.com&amp;show_title=1&amp;show_byline=1&amp;show_portrait=0&amp;color=&amp;fullscreen=1">
 		</embed>
 	    </object>
 
 	    <p>
-	    <a href="http://vimeo.com/1657649?pg=embed&sec=1657649">Ibis code_swarm</a> from 
-	    <a href="http://vimeo.com/user694487?pg=embed&sec=1657649">Nick Palmer</a>
-	    on <a href="http://vimeo.com?pg=embed&sec=1657649">Vimeo</a>.
+	    <a href="http://vimeo.com/1657649?pg=embed&amp;sec=1657649">Ibis code_swarm</a> from 
+	    <a href="http://vimeo.com/user694487?pg=embed&amp;sec=1657649">Nick Palmer</a>
+	    on <a href="http://vimeo.com?pg=embed&amp;sec=1657649">Vimeo</a>.
 	    You can learn more about code_swarm and see the video from other projects here: <a class="moz-txt-link-freetext" href="http://vis.cs.ucdavis.edu/%7Eogawa/codeswarm/">http://vis.cs.ucdavis.edu/~ogawa/codeswarm/</a></p>
