--- a/content/papers.html
+++ b/content/papers.html
@@ -3,42 +3,42 @@
 
 <h2>Papers</h2>
 
-<a name=javagat><h3>JavaGAT</h3></a>
+<a name=javagat></a><h3>JavaGAT</h3>
 <?php
 include ("generated/papers_javagat.html");
 ?>
 
-<a name=satin><h3>Satin</h3></a>
+<a name=satin></a><h3>Satin</h3>
 <?php
 include ("generated/papers_satin.html");
 ?>
 
-<a name=mpj><h3>MPJ</h3></a>
+<a name=mpj></a><h3>MPJ</h3>
 <?php
 include ("generated/papers_mpj.html");
 ?>
 
-<a name=gmi><h3>GMI</h3></a>
+<a name=gmi></a><h3>GMI</h3>
 <?php
 include ("generated/papers_gmi.html");
 ?>
 
-<a name=zorilla><h3>Zorilla</h3></a>
+<a name=zorilla></a><h3>Zorilla</h3>
 <?php
 include ("generated/papers_zorilla.html");
 ?>
 
-<a name=ipl><h3>IPL: Ibis Communication Library</h3></a>
+<a name=ipl></a><h3>IPL: Ibis Communication Library</h3>
 <?php
 include ("generated/papers_ipl.html");
 ?>
 
-<a name=smartsockets><h3>Smartsockets</h3></a>
+<a name=smartsockets></a><h3>Smartsockets</h3>
 <?php
 include ("generated/papers_smartsockets.html");
 ?>
 
-<a name=other><h3>Other</h3></a>
+<a name=other></a><h3>Other</h3>
 <?php
 include ("generated/papers_other.html");
 ?>
