--- a/news.html
+++ b/news.html
@@ -1,4 +1,5 @@
-<!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01//EN">
+<!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN"
+"http://www.w3.org/TR/html4/loose.dtd">
 
 <html>
 <head>
@@ -25,7 +26,29 @@
 <tr>
     <td class="main" align="left" colspan=2>
 	<a href="index.html"><img class=floating-left src="images/logos/ibis-logo.png" alt="Header" ></a>
+
+	<!-- VALIDATION LINKS -->
+
+	<!--
+
+	<a href="http://validator.w3.org/check?uri=referer"><img
+	    class=floating-left
+	    src="http://www.w3.org/Icons/valid-html401-blue"
+	    alt="Valid HTML 4.01 Strict" height="31" width="88"></a>
+
+	<a href="http://jigsaw.w3.org/css-validator/check?uri=referer">
+	    <img style="border:0;width:88px;height:31px"
+	    class=floating-left
+	    src="http://jigsaw.w3.org/css-validator/images/vcss-blue"
+	    alt="Valid CSS!">
+	</a>
+
+	-->
+
+
+
 	<a href="http://www.vu.nl"><img class=floating-right src="images/logos/vu-logo.gif" alt="Header" ></a>
+
     </td>
 
 </tr>
@@ -71,7 +94,7 @@
 <!-- EMPTY SUB MENU -->
 
     <td class=main>
-        <img src="images/gradient.png">
+        <img alt="gradient" src="images/gradient.png">
     </td>
     <!-- CONTENT -->
     <td class=main id=content_cell>
